CH13 - sorting, filtering, pagination, grouping

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -26,6 +26,9 @@
                             <a class="nav-link text-dark" asp-area="Index" asp-controller="Employee" asp-action="Index">Employee</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Employee" asp-action="DeptCount">Employees Per Department</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="Index" asp-controller="Department" asp-action="Index">Departments</a>
                         </li>
                         <li class="nav-item">
