--- a/Views/Employee/Index.cshtml
+++ b/Views/Employee/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<EmployeesCh12.Models.Employee>
+﻿@using EmployeesCh12.Models;
+@model PaginatedList<EmployeesCh12.Models.Employee>
 
 @{
     ViewData["Title"] = "Index";
@@ -9,23 +10,31 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+<form asp-action="Index" method="get">
+    <div class="form-actions no-color">
+        <p>
+            Find by name: <input type="text" name="searchString" value="@ViewData["currentFilter"]" />
+            <input type="submit" value="Search" class="btn btn-primary"/>
+        </p>
+    </div>
+</form>
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.FirstName)
+                @Html.DisplayName("First Name")
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.LastName)
+                <a asp-action="Index" asp-route-sortOrder="@ViewData["NameSortParam"]">Last Name</a>
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.HireDate)
+                <a asp-action="Index" asp-route-sortOrder="@ViewData["DateSortParam"]">Hire Date</a>
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Department)
+                @Html.DisplayName("Department")
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Benefits)
+                @Html.DisplayName("Benefit Category")
             </th>
             <th></th>
         </tr>
@@ -43,10 +52,10 @@
                 @Html.DisplayFor(modelItem => item.HireDate)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Department.ID)
+                @Html.DisplayFor(modelItem => item.Department.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Benefits.ID)
+                @Html.DisplayFor(modelItem => item.Benefits.Category)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
@@ -57,3 +66,21 @@
 }
     </tbody>
 </table>
+@{
+    var prevDisabled = !Model.HasPreviousPage ? "disabled" : "";
+    var nextDisabled = !Model.HasNextPage ? "disabled" : "";
+}
+<a asp-action="Index"
+   asp-route-sortOrder="@ViewData["CurrentSort"]"
+   asp-route-pageNumber="@(Model.PageIndex - 1)"
+   asp-route-sortOrder="@ViewData["CurrentSort"]"
+   class="btn btn-primary @prevDisabled">
+   Previous
+</a>
+<a asp-action="Index"
+   asp-route-sortOrder="@ViewData["CurrentSort"]"
+   asp-route-pageNumber="@(Model.PageIndex + 1)"
+   asp-route-sortOrder="@ViewData["CurrentSort"]"
+   class="btn btn-primary @nextDisabled">
+    Next
+</a>
